--- a/school/index.html
+++ b/school/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="/school/download.jpg" alt=""
+    <img  border="400px" src="/school/download.jpg" alt="vscode">
 </body>
 </html>
