--- a/school/index.html
+++ b/school/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <img  border="400px" src="/school/download.jpg" alt="vscode">
+    <img border="2px" src="/school/download.jpg" alt="vscode">
+    <div>
+        <ol start="101" reversed>
+            <li>Hello world </li>
+            <li>hello world</li>
+
+        </ol>
+    </div>
+    <div
 </body>
+
 </html>
