--- a/school/index.html
+++ b/school/index.html
@@ -14,10 +14,29 @@
         <ol start="101" reversed>
             <li>Hello world </li>
             <li>hello world</li>
-
         </ol>
     </div>
-    <div
+    <div>
+        <dl>
+            <dt>Hello</dt>
+            <dd>helo</dd>
+        </dl>
+    </div>
+    <div>
+        <table border="2px">
+            <tr>
+                <th>
+                    hello 
+                </th>
+            </tr>
+            <tr>
+                <td>
+                    hello
+                </td>
+            </tr>
+            
+        </table>
+    </div>
 </body>
 
 </html>
