--- a/school/index.html
+++ b/school/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <img border="2px" src="/school/download.jpg" alt="vscode">
+    <a href="https://codingciub.tech">
+        <img border="2px" src="/school/download.jpg" alt="vscode" >
+    </a>
     <div>
         <ol start="101" reversed>
             <li>Hello world </li>
