--- a/school/index.html
+++ b/school/index.html
@@ -40,6 +40,10 @@
 
         </table>
     </div>
+    <div>
+        <audio src="/school/mixkit-tech-house-vibes-130.mp3" controls></audio>
+        <video src="/school/video_preview_h264.mp4" controls width="200"></video>
+    </div>
 </body>
 
 </html>
